# llm_server

./: .gitignore  Cargo.toml  config.toml  deny.toml  pyproject.toml  readme.md  readme_en.md  test.py  test_chat_config.toml  test_config.toml
src/: lib.rs  main.rs
src/args/: mod.rs
src/configs/: mod.rs
src/handlers/: audio.rs  chat.rs  mod.rs
src/models/: mod.rs
src/models/audio/: mod.rs
src/models/audio/whisper/: decoder.rs  device.rs  mod.rs  model.rs  multilingual.rs  pcm_decode.rs
src/models/chat/: mod.rs  model.rs  utils.rs
src/models/chat/chat_format/: alpaca.rs  chatml.rs  llama2.rs  mod.rs  openchat.rs
src/types/: mod.rs
src/types/audio/: mod.rs  transcription.rs
src/types/chat/: completion.rs  mod.rs  request.rs  response.rs
