[package]
name = "llm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "llama_cpp_rs/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "llama_cpp_rs/cuda", "dep:bindgen_cuda"]


[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = { version = "0.1.1", optional = true }

[dependencies]
silent = { version = "1.0.9", features = ["multipart", "sse"] }

# base
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.33", features = ["serde"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
toml = "0.8.8"


# whisper
#candle-core = { version = "0.3.2" }
#candle-nn = { version = "0.3.2" }
#candle-transformers = { version = "0.3.2" }
candle-core = { git = "https://github.com/hubertshelley/candle" }
candle-nn = { git = "https://github.com/hubertshelley/candle" }
candle-transformers = { git = "https://github.com/hubertshelley/candle" }
byteorder = "1.5.0"
tokenizers = { version = "0.15.1", features = ["onig"] }
rand = "0.8.5"
serde_json = "1.0.112"
symphonia = { version = "0.5.3", features = ["all"] }

# chat
llama_cpp_rs = "0.3.0"
derive_builder = "0.13.0"
uuid = { version = "1.7.0", features = ["v4"] }
futures-util = "0.3.30"
regex = "1.10.3"
